# GPU-Remoting

./: .gitignore  Cargo.toml  README.md  config.toml
client/: Cargo.toml  build.rs
client/src/: dl.rs  elf.rs  lib.rs  phos.rs
client/src/hijack/: cublasLt_hijack_custom.rs  cublas_hijack_custom.rs  cuda_hijack_custom.rs  cuda_hijack_utils.rs  cudart_hijack_custom.rs  cudart_register.rs  cudnn_hijack_custom.rs  host_memory.rs  mod.rs  nccl_hijack_custom.rs  nvml_hijack_custom.rs  nvrtc_hijack_custom.rs  user_object.rs
client/src/passthrough/: mod.rs
codegen/: README.md
codegen/hookdef/src/: lib.rs
codegen/src/: hook_fn.rs  lib.rs  utils.rs
cudasys/: build.rs
cudasys/hookgen/src/: lib.rs
cudasys/src/: types.rs
cudasys/src/hooks/: cublas.rs  cublasLt.rs  cuda.rs  cudart.rs  cudnn.rs  mod.rs  nccl.rs  nvml.rs  nvrtc.rs
docs/: api_coverage.md  implement_new_apis.md
environment/: Dockerfile  README.md
environment/cuda11/: compose.example.yaml
environment/vllm/: compose.example.yaml
measure/: Cargo.toml
measure/src/: lib.rs
network/: Cargo.toml
network/examples/: shm_client.rs  shm_server.rs
network/src/: lib.rs  tcp.rs
network/src/ringbufferchannel/: README.md  emulator.rs  mod.rs  rdma.rs  shm.rs  test.rs  types.rs  utils.rs
network/src/type_impl/: mod.rs
network/tests/: channel_stress.rs  rdma_comm.rs  tcp_comm.rs  type_transfer.rs
scripts/: checkpoint  client  gpu-remoting-checkpoint  gpu-remoting-client  gpu-remoting-server  server
server/: Cargo.toml  build.rs
server/src/: lib.rs  main.rs  phos.rs
server/src/dispatcher/: cublas_exe_custom.rs  cuda_exe_custom.rs  cuda_exe_utils.rs  cudart_exe_custom.rs  cudnn_exe_custom.rs  mod.rs  nccl_exe_custom.rs  nvml_exe_custom.rs
tests/apps/: README.md  run.sh  run_debug.sh
tests/apps/resnet/: infer.py  train.py
tests/cuda_api/: CMakeLists.txt  startclient.sh  startclient_debug.sh  test_array_extra.cu  test_array_plane_extra.cu  test_async_alloc_extra.cu  test_callback_boundary_extra.cu  test_checkpoint_process_extra.cu  test_cig_stream_extra.cu  test_context_query_extra.cu  test_cooperative_launch_extra.cu  test_coredump_extra.cu  test_cublasLt_algo_api.cu  test_cublasLt_descriptor_api.cu  test_cublasLt_emulation_api.cu  test_cublasLt_grouped_layout_api.cu  test_cublasLt_internal_desc_api.cu  test_cublasLt_logger_api.cu  test_cublasLt_matmul.cu  test_cublasLt_transform_api.cu  test_cublas_batched_solvers.cu  test_cublas_dgmm.cu  test_cublas_geam.cu  test_cublas_gemm_v2.cu  test_cublas_legacy_level1.cu  test_cublas_legacy_level2_gemv_ger.cu  test_cublas_legacy_level2_sym_her.cu  test_cublas_legacy_level3.cu  test_cublas_legacy_rot_params.cu  test_cublas_legacy_triangular.cu  test_cublas_level1_copy_swap.cu  test_cublas_level1_dot.cu  test_cublas_level1_index.cu  test_cublas_level1_reductions.cu  test_cublas_level1_rot.cu  test_cublas_level1_rotm.cu  test_cublas_level1_scal_axpy.cu  test_cublas_level2_band_mv.cu  test_cublas_level2_gbmv.cu  test_cublas_level2_gemv.cu  (+89 more)
tests/performance/: run_byte_track_infer.sh  run_byte_track_train.sh  run_infer.sh  run_infer_cfg.sh  run_training.sh  run_training_cfg.sh
tests/pytorch_minimal/: startpy.sh
tools/coverage/: api_coverage.py  trace_workload.py
