[workspace]
members = [
    "client",
    "codegen",
    "codegen/hookdef",
    "cudasys",
    "cudasys/hookgen",
    "measure",
    "network",
    "server",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
codegen = { path = "codegen" }
cudasys = { path = "cudasys" }
hookdef = { path = "codegen/hookdef" }
hookgen = { path = "cudasys/hookgen" }
measure = { path = "measure" }
network = { path = "network" }
core_affinity = "0.8.1"
env_logger = "0.9"
libc = "*"
log = "0.4.0"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[workspace.lints.rust]
rust-2018-idioms = "warn"
